Revision history for DBIx::Class::Sims (ordered by revision number).

0.310000 Oct ?? 2018 19:30:00 PDT
   All fixes below graciously provided by ZipRecruiter.
   - Warn when a not-null autoincrement primary key has a value set.
     - Set the allow_pk_set_value parameter to disable the warning.

0.301000 Nov 26 2017 19:30:00 PDT
   - Remove a section of code that takes parentage into account when looking for
     existing rows. Please see the attached comment for explanation.

0.300900 Nov 12 2017 14:00:00 PDT
   - Fix a bug preventing null_chance from working.
   - Fixes for running tests under 5.26 (was depending on dot-in-INC)

0.300800 Apr 21 2017 19:00:00 PDT
   - Use a hashref instead of a hashrefref when setting a sims-spec within a
     column.
     - This does not conflict with describing a parent's attributes.

0.300700 Apr 10 2017 11:00:00 PDT
   - Allow sim types authors to use a regex to match multiple strings to the same
     type handler.
   - Pass the calculated sims specification into the sim types generator.
      - This will enable types to get access to any overriden sims specification.

0.300600 Mar 05 2017 11:00:00 PDT
   - Pass the runner into the sim types generator.
      - This will enable types to get access to the schema and storage objects.

0.300501 Dec 29 2016 11:00:00 PDT
   - Ensure we are specifying at least one column when inserting into Oracle.

0.300500 Dec 17 2016 18:00:00 PDT
   - Many more column types have default values set when not null.
      - If a column type is unknown, an error will be thrown instead of silently
        failing over to the INSERT statement.

0.300406 Dec 12 2016 18:00:00 PDT
   - Applied pull/26 (Thanks, manwar!)
   - Added a check for accidental recursive creation (aka, self-referential tables).

0.300405 Dec 02 2016 12:00:00 PDT
   - Re-fixed RT#118518 (Thanks SREZIC!)

0.300404 Dec 01 2016 12:00:00 PDT
   - Support arrays for the "value" sim option
     - "values" is now synonymous with "value"